add menu section

--- a/index.html
+++ b/index.html
@@ -31,12 +31,30 @@
     <h2><br>Welcome<br> to Habib pizza</h2>
   </div>
   <div class="aboutus" id="aboutus">
-        <h1>ABOUT US</h1>
+        <h3>About us</h3>
         <p>Habib pizza is a clean, fine dining pizza place,with yummy,healthy and nutrition pizza of your choice and fastest delivery.<br>
             We are located in Nairobi,Mugoya South c.Its the best pizza you will ever taste and we offer the best to our customers.</p>
         
     </div>
- 
-
+ <div class="menu" id="menu">
+     <h3>Menu</h3>
+     <div class="row">
+            <div class="col-md-3">
+               <div class="row1">
+                    <p id="smallpizza">300ksh</p><img src="images.jpeg" alt="smallpizza" width=250 class="smallpizza">
+               </div> 
+            </div>
+     </div>
+ </div>
+  <div class="col-md-3">
+        <div class="row2">
+                <p id="mediumpizza">800ksh</p><img src="img2.jpeg" alt="mediumpizza" width=250 class="mediumpizza">
+        </div>
+  </div>
+  <div class="col-md-3">
+      <div class="row3">
+            <p id="largepizza">1200ksh</p><img src="img3.jpg" alt="largepizza" width=250 class="largepizza">
+      </div>
+  </div>
 </body>
 </html>
