add changes on script.js

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <form class="col-sm-6 offset-sm-3 text-center">
                         <label>Pick your Flavour:</label>
                         <select class="custom-select custom-select-md mb-3 flavour" required>
-                            <option value="vegtikka">Veg Tikka</option>
+                            <option value="peperoni">Peperoni</option>
                             <option value="chickentikka">Chicken Tikka</option>
                             <option value="periperi">Peri-Peri Chicken</option>
                             <option value="bbq">BBQ Steak</option>
@@ -116,16 +116,16 @@
                         </select>
                         <label>Chose your preferred Size:</label>
                         <select class="custom-select custom-select-md mb-3" id="size" required>
-                            <option value="regular">Regular</option>
-                            <option value="medium">Medium</option>
-                            <option value="large">Large</option>
+                            <option value="regularpizza">Regular</option>
+                            <option value="mediumpizza">Medium</option>
+                            <option value="largepizza">Large</option>
                         </select>
                         <label for="crust">Choose your favorite Crust:</label>
                         <select class="custom-select custom-select-md mb-3" id="crust" required>
-                            <option value="thin">Thin Crust @ Ksh. 100</option>
-                            <option value="thick">Thick Crust @ Ksh. 150</option>
-                            <option value="flatbread">FlatBread Crust @ sh. 180</option>
-                            <option value="custom">Custom Crust @ sh. 280</option>
+                            <option value="thincrust">Thin Crust @ Ksh. 120</option>
+                            <option value="thickcrust">Thick Crust @ Ksh. 180</option>
+                            <option value="flatbreadcrust">FlatBread Crust @ sh. 200</option>
+                            <option value="customcrust">Custom Crust @ sh. 300</option>
                         </select>
                         <label>pick Your favourite Toppings</label>
                         <select class="custom-select custom-select-md mb-3" id="toppings" required>
