add changed checkout button position

--- a/index.html
+++ b/index.html
@@ -140,10 +140,7 @@
                     <label for="number">Number of Pizza's</label>
                     <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1"
                         required>
-
-                    <button type="submit" class="btn btn-success checkout" id="checkout">
-                        Checkout
-                    </button>
+                    <label>would you like your order to be delivered</label>
                     <div class="cdata-overlay">
                             <div class="customerdata row">
                                 <div class="col-sm-3"></div>
@@ -152,6 +149,9 @@
                                     <input type="text" class="form-control cdata" placeholder="Enter your phone number: " id="number">
                                     <input type="text" class="form-control cdata" placeholder="Enter the location: " id="location">
                                     <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                                    <button type="submit" class="btn btn-success checkout" id="checkout">
+                                            Checkout
+                                        </button>
                                 </form>
                     
                             
