add new changes to flavour

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                 <div class="col-sm-8 order-overlay text-center">
                     <form class="col-sm-6 offset-sm-3 text-center" id="delivery">
                         <label>Pick your Flavour:</label>
-                        <select class="custom-select custom-select-md mb-3 flavour" required>
-                            <option value="">Peperoni</option>
-                            <option value="">Chicken Tikka</option>
-                            <option value="">Peri-Peri Chicken</option>
-                            <option value="">BBQ Steak</option>
-                            <option value="">Hawaiian</option>
-                            <option value="">Chicken and Mushroom</option>
+                        <select class="custom-select custom-select-md mb-3 flavour" id="flavour" required>
+                            <option value="0">Peperoni</option>
+                            <option value="0">Chicken Tikka</option>
+                            <option value="0">Peri-Peri Chicken</option>
+                            <option value="0">BBQ Steak</option>
+                            <option value="0">Hawaiian</option>
+                            <option value="0">Chicken and Mushroom</option>
                         </select>
                         <label>Chose your preferred Size:</label>
                         <select class="custom-select custom-select-md mb-3" id="size" required>
