--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>Habib pizza is a clean, fine dining pizza place,with yummy,healthy and nutrition pizza of your choice and
             fastest delivery.<br>
             We are located in Nairobi,Mugoya South c.Its the best pizza you will ever taste and we offer the best to our
-            customers.</p>
+            customers.<br>we love our customers feedback please contact us on 0725142516 or email us on halimaadan92@gmail.com</p>
 
     </div>
     <div class="menus" id="menus"></div>
@@ -157,7 +157,6 @@
 
 
                             </div>
-
 
 
 
